testsuite/tests/parser/should_fail/RecordDotSyntaxFail13.stderr

RecordDotSyntaxFail13.hs:26:11: error:
    • Couldn't match type ‘Int’ with ‘Foo -> Int’
        arising from a functional dependency between:
          constraint ‘HasField "foo" Foo (Foo -> Int)’
            arising from a record update
          instance ‘HasField "foo" Foo Int’
            at RecordDotSyntaxFail13.hs:21:10-31
    • In the second argument of ‘($)’, namely ‘a {foo}’
      In a stmt of a 'do' block: print $ a {foo}
      In the expression:
        do let a = ...
           print $ a {foo}
